# rcgov

./: .gitignore  CITATION.cff  LICENSE-docs  NOTICE  README.md  pyproject.toml
app/: streamlit_app.py
config/: commitments.yaml  injection_seeds.yaml  profiles.yaml  secret_patterns.yaml
docs/: DECISION_RECORD.md  minimal_data_contract_v0_1.md  paper_v0_7.md  spec_v0_4.md
src/rcgov/: __init__.py  cli.py  commit.py  conflict.py  pipeline.py  records.py  service.py  store.py  textutils.py
src/rcgov/contract/: __init__.py  enums.py  models.py
src/rcgov/friction/: __init__.py
src/rcgov/gates/: __init__.py
src/rcgov/ingest/: __init__.py
src/rcgov/pack/: __init__.py
src/rcgov/priority/: __init__.py
src/rcgov/propose/: __init__.py
src/rcgov/provenance/: __init__.py
src/rcgov/scan/: __init__.py  injection.py  secrets.py
src/rcgov/segment/: __init__.py
tests/: test_app_smoke.py  test_commit.py  test_contract.py  test_gates_priority_friction.py  test_pipeline.py  test_scan.py  test_service.py
tests/dogfooding/: test_001.py
tests/dogfooding/fixtures/: mojibake_dirty.md
