[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcgov"
version = "0.1.0"
description = "Mobius Reflective Context Governor — local-first semantic hygiene and context governance for LLM systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Taiko Toeda", email = "toeda.t@gmail.com" }]
keywords = [
  "context-governance", "semantic-filtration", "long-context", "rag",
  "prompt-injection", "authority-disagreement", "friction-governance",
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Development Status :: 2 - Pre-Alpha",
]

# Robust core deps are intentionally light. Detection is model-independent:
# secrets = regex + entropy, prompt-injection = heuristic seeds, relevance = ME5.
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Pulled only when the experimental relevance/embedding path is exercised.
embed = ["sentence-transformers>=2.2", "numpy>=1.24"]
# Streamlit MVP UI (app/streamlit_app.py).
ui = ["streamlit>=1.30"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
rcgov = "rcgov.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
